# manage_django_project

./: .gitignore  .pre-commit-config.yaml  README.md  manage.py  noxfile.py  pyproject.toml  requirements.dev.txt  requirements.django32.txt  requirements.django41.txt  requirements.django42.txt  requirements.django50.txt  requirements.txt
.github/workflows/: tests.yml
.run/: Template Django tests.run.xml  Template Python.run.xml  Unittests __all__.run.xml  manage.py --help.run.xml  manage.py make_messages.run.xml  manage.py nox.run.xml
example_project/example_project/: settings.py  urls.py
manage_django_project/: __init__.py  apps.py  config.py  exceptions.py  manage.py  test_utilities.py
manage_django_project/management/: base.py
manage_django_project/management/commands/: code_style.py  coverage.py  install.py  make_messages.py  nox.py  pip_audit.py  playwright.py  project_info.py  publish.py  safety.py  shell.py  tox.py  update_req.py  update_test_snapshot_files.py
manage_django_project/tests/: __init__.py  cmd2_test_utils.py  command_test_utils.py  test_command_code_style.py  test_command_coverage.py  test_command_install.py  test_command_nox.py  test_command_pip_audit.py  test_command_playwright.py  test_command_project_info.py  test_command_project_info_basic_install_1.snapshot.txt  test_command_project_info_project_info_1.snapshot.txt  test_command_publish.py  test_command_run_dev_server.py  test_command_run_dev_server_basic_run_dev_server_1.snapshot.txt  test_command_safety.py  test_command_shell.py  test_command_shell_help_django3.2.snapshot.txt  test_command_shell_help_django4.1.snapshot.txt  test_command_shell_help_django4.2.snapshot.txt  test_command_shell_help_django5.0.snapshot.txt  test_command_shell_help_django5.1.snapshot.txt  test_command_shell_help_django6.0.snapshot.txt  test_command_tox.py  test_command_update_req.py  test_command_update_req_basic_update_req_1.snapshot.json  test_command_update_test_snapshot_files.py  test_config.py  test_doctests.py  test_example_project.py  test_manage.py  test_project_setup.py  test_readme.py
manage_django_project_example/: __init__.py  __main__.py  apps.py  asgi.py  checks.py  wsgi.py
manage_django_project_example/management/commands/: no_command1.py  no_command2.py  publish.py
manage_django_project_example/settings/: base.py  local.py  prod.py  test.py  tests.py
